--- a/src/stylesheets/CardImages.css
+++ b/src/stylesheets/CardImages.css
@@ -7,9 +7,11 @@
 }
 
 .card-img{
-  margin-left: 5%;
-  margin-top: 8%;
-  height: 280px;
-  width: 200px;
+  position:relative;
+  display:block;
+  margin:0 auto;
   cursor: pointer;
+  object-fit: contain;
+  height:100%;
+  width:100%;
 }
