--- a/src/stylesheets/DeckList/CardTile.css
+++ b/src/stylesheets/DeckList/CardTile.css
@@ -1,9 +1,10 @@
 .tile{
-  height: calc(85vh / 32.5);
+  position: relative;
+  height: 3.333333%;
   width: 100%;
   display:flex;
   align-items:center;
   justify-content: center;
   cursor:pointer;
-  border:1px solid black;
+  border-bottom:1px solid black;
 }
