Can now save,load,delete decks by name instead of deckID

--- a/src/stylesheets/DeckOptions/DeckButtons.css
+++ b/src/stylesheets/DeckOptions/DeckButtons.css
@@ -11,7 +11,10 @@
   cursor: pointer;
   height:100%;
 }
-
+.button:hover{
+  background-color: rgb(35,35,35);
+  color:white;
+}
 
 .deck-input-text{
   flex:1;
