--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -15,3 +15,22 @@ body{
   grid-template-rows: 85vh 10vh;
   grid-gap: 1em;
 }
+
+.background{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: .6;
+  background-image: url('https://www.hdwallpaper.nu/wp-content/uploads/2015/01/hearthstone-deck.jpg');
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+}
+
+.dark-background{
+  background-color: rgba(40,40,40,.85);
+  color:white;
+  border:solid rgb(20,20,20) 2px;
+  border-radius: 5px;
+  overflow: hidden;
+}
