--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -2,14 +2,21 @@
 	box-sizing: border-box;
 }
 
+#root{
+  overflow: hidden;
+  padding-top: 5px;
+  padding-left: 12px;
+}
+
 body{
   margin:0;
   padding:0;
 }
 
 .App{
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  margin-left:5px;
   display: grid;
   grid-template-columns: 75vw 22vw;
   grid-template-rows: 85vh 10vh;
@@ -18,6 +25,8 @@ body{
 
 .background{
   position: fixed;
+  top:0;
+  left:0;
   width: 100%;
   height: 100%;
   z-index: -2;
